--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <body>
 <header></header>
         <main>
+          <img src="images/mayara port.jpg" alt="" width="200" />
             <h1>Portfólio Mayara Soares</h1>
 
-            <img src="Imagens/mayara port.jpg" alt="" width="100" />
-        
-            <h2>Desenvolvedor Full Stack.</h2>
+            <h2>Sobre mim.</h2>
             <p>
               Sou um <strong> desenvolvedor web</strong> paixonada por tecnologia e
               inovação e Javascript. Comecei meus estudos em 2023 sozinha com aulas no
@@ -75,6 +74,7 @@
         Cursando 3° Semestre
       </li>
       <li><b>Desenvolvedor Full Stack</b> - Geração Tech 2.0</li>
+      <li>3 meses - 192 hora/aula</li>
     </ul>
 </div>
 
@@ -83,7 +83,7 @@
 
     <ul>
       <li><b>Telefone:</b> (85) 9 8186-9203</li>
-      <li><b>Email:</b> mayara.mss13@gmail.com</li>
+      <li><b>Email:</b> mayarasoaresdev@gmail.com</li>
     </ul>
 
 </div>
